--- a/assets/scss/_banner.scss
+++ b/assets/scss/_banner.scss
@@ -40,7 +40,7 @@
 	}
 
 	.directions{
-		color: #80a2f1;
+		color: #007bff;
 	}
 }
 
